--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -34,5 +34,28 @@
     </div>
     {% endif %}
   </div>
+  <!-- PAGINATION -->
+  <div class="text-center">
+    {% if is_paginated %}
+    {% if page_obj.has_previous %}
+      <a class="btn btn-outline-info my-4" href="?page=1">First</a>
+      <a class="btn btn-outline-info my-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+    {% endif %}
+
+    {% for page_num in page_obj.paginator.page_range %}
+      {% if page_obj.number == page_num %}
+       <a class="btn btn-info my-4" href="?page={{ page_num }}">{{ page_num }}</a>
+      {% elif page_num > page_obj.number|add:'-3' and page_num < page_obj.number|add:'3' %}
+        <a class="btn btn-outline-info my-4" href="?page={{ page_num }}">{{ page_num }}</a>
+      {% endif %} 
+    {% endfor %}
+
+    {% if page_obj.has_next %}
+      <a class="btn btn-outline-info my-4" href="?page={{ page_obj.next_page_number}}">Next</a>
+      <a class="btn btn-outline-info my-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+    {% endif %}
+
+  {% endif %}
+  </div>
 </div>
 {% endblock content%}
