--- a/books/templates/books/book_details.html
+++ b/books/templates/books/book_details.html
@@ -39,7 +39,8 @@
         </div>
       {% endif %}
     </div>
-    <div style="border-left: 2px solid #0DCAF0" class="col-lg-6 text-right mt-5 px-3">     
+    <div class="col-lg-6 text-right mt-5 px-3">
+      <div style="border-left: 2px solid #0DCAF0" class="px-3">     
         <h1>{{object.title}}</h1>
         <h2><a href="{% url 'author_books' object.author %}">{{ object.author }}</a></h2>
         <h4>Language - {{ object.language }}</h4>
@@ -50,6 +51,7 @@
             <!-- object.date_posted|date:'l d-m-y' -->
           <h6>Shared by {{ object.posted_by }} on {{ object.date_posted|date:'l d-m-y' }}</h6>
         </div>
+    </div>
     </div>
   </div>
 </div>
