--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -19,7 +19,11 @@
         <div class="col-lg-6 text-center my-3">
           <img src="{{ book.image.url }}" alt="no photo" class="rounded" />
           <h4 class="mt-3">{{ book.title }}</h4>
-          <h5><a href="{% url 'author_books' book.author%}">{{ book.author }}</a></h5>
+          {% if request.resolver_match.url_name == 'author_books' %}
+            <h5>{{ book.author }}</h5>
+          {% else %}
+            <h5><a href="{% url 'author_books' book.author%}">{{ book.author }}</a></h5>
+          {% endif%}
           <a
             href="{% url 'books_details' pk=book.pk slug=book.slug %}"
             class="btn btn-outline-info mt-1 mb-3"
