--- a/users/templates/users/favourites.html
+++ b/users/templates/users/favourites.html
@@ -13,7 +13,7 @@
       <div class="col-lg-6 text-center mt-4 border-bottom border-info">
         <img src="{{ book.image.url }}" alt="no photo" class="rounded" />
         <h4 class="mt-3">{{ book.title }}</h4>
-        <h5>{{ book.author }}</h5>
+        <h5><a href="{% url 'author_books' book.author %}">{{ book.author }}</a></h5>
         <a
           href="{% url 'books_details' pk=book.pk slug=book.slug %}"
           class="btn btn-outline-info mt-1 mb-3"
